Enforce using npm (+upgrade)

--- a/src/(components)/GithubWidget.astro
+++ b/src/(components)/GithubWidget.astro
@@ -15,7 +15,8 @@
 				];
 				return acc + `${d[0]}h ${d[1]}m ago | ${el.commit.message}\n`;
 			}, "");
-			document.getElementById("message")?.innerHTML = markup;
+			const el = document.getElementById("message");
+			if (el) el.innerHTML = markup;
 		})
 		.catch(() => {
 			document.getElementById("message")?.classList.add("hidden");
